Make some Minor changes

--- a/ImpactSense_Notebook.ipynb
+++ b/ImpactSense_Notebook.ipynb
@@ -5,7 +5,7 @@
    "id": "d8494337",
    "metadata": {},
    "source": [
-    "MileStone 1"
+    "# MileStone 1"
    ]
   },
   {
@@ -13,12 +13,12 @@
    "id": "a2b22d89",
    "metadata": {},
    "source": [
-    "Import Libraries (Code)"
+    "Import Libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "616d9431",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,6 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "# Set plot style for better-looking graphs\n",
     "sns.set_style('whitegrid')\n",
     "\n",
     "print(\"Libraries imported successfully!\")"
@@ -53,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "dac9b0ac",
    "metadata": {},
    "outputs": [
@@ -74,13 +73,11 @@
     }
    ],
    "source": [
-    "# Load the main earthquake dataset\n",
-    "# The file is in the 'data/primary/' folder.\n",
     "file_path = 'data/primary/Significant_Earthquakes.csv'\n",
     "\n",
     "\n",
     "df = pd.read_csv(file_path)\n",
-    "print(\"✅ Dataset loaded successfully!\")\n",
+    "print(\"Dataset loaded successfully!\")\n",
     "\n",
     "\n"
    ]
@@ -193,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "c0c8168b",
    "metadata": {},
    "outputs": [
@@ -220,7 +217,7 @@
     "# Calculate the number of missing values in each column\n",
     "missing_values = df.isnull().sum()\n",
     "\n",
-    "# Display the columns with missing values (if any)\n",
+    "\n",
     "print(\"Missing values per column:\")\n",
     "print(missing_values[missing_values > 0])"
    ]
@@ -237,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "bafe1d3f",
    "metadata": {},
    "outputs": [
@@ -253,9 +250,7 @@
    "source": [
     "import os\n",
     "\n",
-    "# --- 1. Perform the Cleaning ---\n",
     "\n",
-    "# Define the list of columns to drop due to too many missing values\n",
     "columns_to_drop = ['tz', 'felt', 'cdi', 'mmi', 'alert', 'nst', 'dmin', 'rms', 'gap']\n",
     "\n",
     "# Drop the specified columns\n",
@@ -267,22 +262,16 @@
     "print(f\"Data cleaning complete. The cleaned dataset has {cleaned_df.shape[0]} rows.\")\n",
     "\n",
     "\n",
-    "# --- 2. Save the Cleaned Data to a New File ---\n",
     "\n",
-    "# Define the path for the new 'processed' folder\n",
     "output_folder = 'data/processed'\n",
     "\n",
-    "# Create the folder if it doesn't already exist\n",
+    "\n",
     "os.makedirs(output_folder, exist_ok=True)\n",
     "\n",
-    "# Define the full path for the output file\n",
     "output_file_path = os.path.join(output_folder, 'cleaned_earthquakes.csv')\n",
-    "\n",
-    "# Save the cleaned dataframe to a CSV file\n",
-    "# index=False prevents pandas from writing the dataframe index as a column\n",
     "cleaned_df.to_csv(output_file_path, index=False)\n",
     "\n",
-    "print(f\"✅ Cleaned data has been saved successfully to: '{output_file_path}'\")"
+    "print(f\"Cleaned data has been saved successfully to: '{output_file_path}'\")"
    ]
   },
   {
@@ -295,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "a85747ec",
    "metadata": {},
    "outputs": [
@@ -513,11 +502,10 @@
     }
    ],
    "source": [
-    "# Load the cleaned dataset for visualization and modeling\n",
     "cleaned_file_path = 'data/processed/cleaned_earthquakes.csv'\n",
     "df = pd.read_csv(cleaned_file_path)\n",
     "\n",
-    "print(\"✅ Cleaned dataset loaded successfully!\")\n",
+    "print(\"Cleaned dataset loaded successfully!\")\n",
     "df.head()"
    ]
   },
@@ -555,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "eee18bbb",
    "metadata": {},
    "outputs": [
@@ -986,7 +974,6 @@
     "    df, geometry=gpd.points_from_xy(df.longitude, df.latitude)\n",
     ")\n",
     "\n",
-    "# Ensure both GeoDataFrames use the same coordinate reference system (CRS)\n",
     "earthquakes_gdf.set_crs(soil_map.crs, inplace=True)"
    ]
   },
@@ -1236,15 +1223,14 @@
    ],
    "source": [
     "# Perform the spatial join using the 'predicate' argument\n",
-    "# This finds which soil polygon each earthquake point is 'within'\n",
+    "\n",
     "df_with_soil = gpd.sjoin(earthquakes_gdf, soil_map, how=\"inner\", predicate='within')\n",
     "\n",
     "# The resulting df_with_soil now has soil data. Let's look at the new columns.\n",
     "print(\"Columns after adding soil data:\")\n",
     "print(df_with_soil.columns)\n",
     "\n",
-    "# Drop unnecessary columns that were added during the join\n",
-    "# 'index_right' is the index from the soil_map, and 'geometry' is the earthquake point\n",
+    "\n",
     "df_with_soil.drop(columns=['index_right', 'geometry'], inplace=True)\n",
     "\n",
     "# Let's see the first few rows with the new soil info\n",
@@ -1254,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "04e0565a",
    "metadata": {},
    "outputs": [
@@ -1269,22 +1255,18 @@
    "source": [
     "import os\n",
     "\n",
-    "# --- Save the Enriched Data to a New CSV File ---\n",
-    "\n",
-    "# Define the path for the processed data folder\n",
     "output_folder = 'data/processed'\n",
     "output_file_path = os.path.join(output_folder, 'earthquakes_with_soil.csv')\n",
     "\n",
-    "# Save the DataFrame to the new CSV file\n",
-    "# We use index=False to prevent writing the row numbers as a column\n",
+    "\n",
     "df_with_soil.to_csv(output_file_path, index=False)\n",
     "\n",
-    "print(f\"✅ Data with soil information saved successfully to: '{output_file_path}'\")"
+    "print(f\"Data with soil information saved successfully to: '{output_file_path}'\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "58f1f777",
    "metadata": {},
    "outputs": [
@@ -1510,7 +1492,6 @@
     }
    ],
    "source": [
-    "# Load the final dataset that includes soil information\n",
     "final_data_path = 'data/processed/earthquakes_with_soil.csv'\n",
     "df = pd.read_csv(final_data_path)\n",
     "\n",
@@ -1609,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "26782b3d",
    "metadata": {},
    "outputs": [
@@ -1840,7 +1821,6 @@
     "# Load dataset\n",
     "df = pd.read_csv('data/processed/earthquakes_with_soil.csv')\n",
     "\n",
-    "# Classify risk based on 'sig' score\n",
     "df['damage_risk'] = pd.cut(df['sig'],\n",
     "                           bins=[-1, 499, 749, float('inf')],\n",
     "                           labels=['Low', 'Medium', 'High'])\n",
@@ -1885,7 +1865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "f5959f8a",
    "metadata": {},
    "outputs": [
@@ -1911,7 +1891,7 @@
     "X = df[features]\n",
     "y = df[target]\n",
     "\n",
-    "print(f\"✅ Successfully selected features using '{soil_column_name}' as the soil column.\")\n",
+    "print(f\"Successfully selected features using '{soil_column_name}' as the soil column.\")\n",
     "print(\"\\nShape of our features (X):\", X.shape)\n",
     "print(\"Shape of our target (y):\", y.shape)"
    ]
@@ -1963,7 +1943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "184e8d03",
    "metadata": {},
    "outputs": [
@@ -1983,15 +1963,14 @@
     "numerical_features = ['mag', 'latitude', 'longitude']\n",
     "categorical_features = [soil_column_name] # Using 'DOMSOI'\n",
     "\n",
-    "# Create a preprocessor object using ColumnTransformer\n",
-    "# This will apply StandardScaler to numerical features and OneHotEncoder to categorical ones\n",
+    "\n",
     "preprocessor = ColumnTransformer(\n",
     "    transformers=[\n",
     "        ('num', StandardScaler(), numerical_features),\n",
     "        ('cat', OneHotEncoder(handle_unknown='ignore'), categorical_features)\n",
     "    ])\n",
     "\n",
-    "print(\"✅ Preprocessor defined successfully.\")"
+    "print(\"Preprocessor defined successfully.\")"
    ]
   },
   {
@@ -2004,7 +1983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "05ab241b",
    "metadata": {},
    "outputs": [
@@ -2025,7 +2004,7 @@
     "# Use the same fitted preprocessor to transform the test data\n",
     "X_test_processed = preprocessor.transform(X_test)\n",
     "\n",
-    "print(\"✅ Preprocessing complete!\")\n",
+    "print(\"Preprocessing complete!\")\n",
     "print(\"Shape of processed training data:\", X_train_processed.shape)\n",
     "print(\"Shape of processed testing data:\", X_test_processed.shape)"
    ]
@@ -2040,7 +2019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "18326338",
    "metadata": {},
    "outputs": [
@@ -2055,14 +2034,12 @@
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "# Initialize the Logistic Regression model\n",
-    "# We add max_iter=1000 to ensure the model has enough iterations to converge\n",
     "log_reg_model = LogisticRegression(random_state=42, max_iter=1000)\n",
     "\n",
     "# Train the model on the processed training data\n",
     "log_reg_model.fit(X_train_processed, y_train)\n",
     "\n",
-    "print(\"✅ Baseline Logistic Regression model trained successfully on the enriched data!\")"
+    "print(\"Baseline Logistic Regression model trained successfully on the enriched data!\")"
    ]
   },
   {
@@ -2158,7 +2135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "06c835e5",
    "metadata": {},
    "outputs": [
@@ -2173,15 +2150,13 @@
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "# Initialize the Random Forest Classifier\n",
-    "# n_estimators=100 means it will build 100 decision trees\n",
-    "# random_state=42 ensures the results are reproducible\n",
+    "\n",
     "rf_model = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "\n",
     "# Train the model on the same processed training data\n",
     "rf_model.fit(X_train_processed, y_train)\n",
     "\n",
-    "print(\"✅ Advanced Random Forest model trained successfully!\")"
+    "print(\"Advanced Random Forest model trained successfully!\")"
    ]
   },
   {
@@ -2257,7 +2232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "c33d7005",
    "metadata": {},
    "outputs": [
@@ -2285,9 +2260,6 @@
     "# Extract feature importances from the trained Random Forest model\n",
     "importances = rf_model.feature_importances_\n",
     "\n",
-    "# To make sense of the importances, we need to get the final feature names\n",
-    "# after one-hot encoding.\n",
-    "# The preprocessor we built earlier can give us these names.\n",
     "feature_names = preprocessor.named_transformers_['cat'].get_feature_names_out(categorical_features)\n",
     "all_feature_names = list(numerical_features) + list(feature_names)\n",
     "\n",
@@ -2369,7 +2341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "b35b6f26",
    "metadata": {},
    "outputs": [
@@ -2394,7 +2366,7 @@
     "soil_types = df[soil_column_name].unique().tolist()\n",
     "joblib.dump(soil_types, 'models/soil_types.joblib')\n",
     "\n",
-    "print(\"✅ Model, preprocessor, and soil types list saved successfully in the 'models' folder!\")"
+    "print(\"Model, preprocessor, and soil types list saved successfully in the 'models' folder!\")"
    ]
   }
  ],
