--- a/EarthQuake_Prediction_using_ML_Pipeline.ipynb
+++ b/EarthQuake_Prediction_using_ML_Pipeline.ipynb
@@ -6119,8 +6119,7 @@
         "id": "8f9a8c8f"
       },
       "source": [
-        "import shap\n",
-        "import seaborn as sns"
+        "import shap\n"
       ],
       "execution_count": 69,
       "outputs": []
